--- a/frontend/6-React/2-state/children-props/src/App.css
+++ b/frontend/6-React/2-state/children-props/src/App.css
@@ -1,42 +1,74 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/*********** Header */
+
+header {
+  display: flex;
+  justify-content: space-around;
+}
+
+/*********** Navigation */
+
+nav {
+  display: flex;
+
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none; 
+}
+
+nav ul li {
+  margin-right: 5px;
+}
+
+/*********** Login */
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-weight: bold;
+  text-align: left;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row; 
+}
+
+input[type="text"],
+input[type="password"] {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+/*********** Footer */
+
+footer {
+  font-size: 12px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+/*********** Public Layout */
+
+main {
+  margin: 50px 15px 50px 15px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+main h1 {
+  text-align: center;
 }
